# metodologias-scraping-vacantes

./: .gitignore  README.md  pyproject.toml  taxonomy.json
src/vacancy_extractor/: __init__.py  cleaner.py  cli.py  config.py  dataset_store.py  extractor.py  fetcher.py  models.py  normalizer.py  taxonomy.py
tests/: test_cleaner.py  test_dataset_store.py  test_normalizer.py  test_taxonomy.py
