[project]
name = "vacancy-extractor"
version = "0.1.0"
description = "CLI para extraer dominios taxonómicos de vacantes de empleo mediante OpenAI Structured Outputs."
requires-python = ">=3.9"
dependencies = [
    "openai>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
vacancy-extractor = "vacancy_extractor.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vacancy_extractor = []
